--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>univocity-parsers</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.lwjgl/lwjgl-opengl -->
+        <dependency>
+            <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl-opengl</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
 
 </project>
